--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "slither"
   ],
   "author": "Rajeev Gopalakrishna",
-  "license": "MIT",
+  "license": "AGPL v3",
   "bugs": {
     "url": "https://github.com/crytic/slither/issues"
   },
