Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embark-contract-info",
+  "name": "@trailofbits/embark-contract-info",
   "version": "1.0.0",
   "description": "Embark Contract Information plugin",
   "main": "index.js",
